# opengl_games

./: CMakeLists.txt  GLModule.h  GLUtils.cpp  GLUtils.h  main.cpp  readme.md
glsl/: ball.geom  ball.vert  circle.vert  color.frag  test.vert
glsl/ball/: ball.frag  ball.geom  ball.vert
include/GLFW/: glfw3.h
include/glad/: glad.h
module/: ModuleBall.cpp  ModuleBall.h  ModuleCircle.cpp  ModuleCircle.h  ModuleTest.cpp  ModuleTest.h
src/: glad.c
